--- a/index.html
+++ b/index.html
@@ -2,12 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="0StbJ60hLZodghaFHF6sCbeGIqboDTCgIFNSvq5uE9w" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electricity Bill Explained: Why It’s the Bane of Every Household</title>
     <meta name="description" content="Calculate and pay your electricity bill online with ease. Get quick access to billing info, payment options, and support for any inquiries.">
     <meta name="keywords" content="Electricity Bill, Electricity FESCO Bill, Check FESCO Bill Online, FESCO Online Bill, FESCO Bill Check, FESCO Bill Download, FESCO Bill Payment">
-    <link rel="canonical" href="https://electricbill.w3spaces.com/">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://electricitybill.vercel.app/">
     <link rel="icon" href="Fesco.png" type="image/x-icon">
+    <link rel="alternate" href="https://electricitybill.vercel.app/" hreflang="en">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Article",
+            "headline": "Electricity Bill Explained: Why It’s the Bane of Every Household",
+            "description": "Calculate and pay your electricity bill online with ease. Get quick access to billing info, payment options, and support for any inquiries.",
+            "author": {
+                "@type": "Organization",
+                "name": "Electricity Bill"
+            },
+            "publisher": {
+                "@type": "Organization",
+                "name": "Electricity Bill",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://electricitybill.vercel.app/Fesco.png"
+                }
+            },
+            "datePublished": "2024-09-15",
+            "image": "https://electricitybill.vercel.app/fesco3.jpg"
+        }
+        </script>
+        
     <style>
         body {
             font-family: Arial, sans-serif;
